--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
@@ -56,7 +56,7 @@
             <mat-form-field appearance="outline" >
               <mat-label>From date</mat-label>
               <input matInput
-                     (dateInput)="checkDateWithinOpenEvent()"
+                     (dateChange)="checkDateWithinOpenEvent()"
                 [matDatepicker]="fromPicker"
                 [readonly]="isReadOnly === true"
                 formControlName="damageFromDate"
