EMCRI-749, EMCRI-739, EMCRI-689, EMCRI-728, EMCRI-725, EMCRI-718, EMCRI-746, EMCRI-664

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
@@ -157,7 +157,7 @@
           <span><b>Less First $1,000 -</b></span>
         </div>
         <div class="col-md-2">
-          <span id="spnCauseOfDamage">{{applItem.lessFirst1000}}</span>
+          <span id="spnCauseOfDamage">{{applItem.lessFirst1000 }}</span>
         </div>
         <div class="col-md-2">
           <span><b>Paid Claim Amount -</b></span>
@@ -172,10 +172,10 @@
           <span><b>Claim Total -</b></span>
         </div>
         <div class="col-md-2">
-          <span id="spnCauseOfDamage">{{applItem.claimTotal}}</span>
+          <span id="spnCauseOfDamage">{{applItem.claimTotal }}</span>
         </div>
         <div class="col-md-2">
-          <span><b>Approved Reimebursement % -</b></span>
+          <span><b>Approved Reimbursement % -</b></span>
         </div>
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.approvedReimbursePercent}}</span>
