--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.scss
@@ -13,6 +13,12 @@
     cursor: pointer;
 }
 
+.wrap-text {
+  overflow-wrap: anywhere;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
 .application-button {
   float: left !important;
   /* background-color: #ffffff; */
