--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-project-main-forms/recovery-plan/recovery-plan.component.html
@@ -402,7 +402,7 @@
                   matInput
                        required
                   placeholder="Estimate or actual cost"
-                  (keypress)="numericOnly($event)"
+                  mask="99999999999999.00"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
