--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
@@ -125,7 +125,7 @@
                   id="currencyBoxTotalInvoicesBeingClaimed"
                   formControlName="totalInvoicesBeingClaimed"
                   matInput
-                       mask="99999999999999.00"
+                       mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -145,7 +145,7 @@
                   id="currencyBoxClaimPST"
                   formControlName="claimPST"
                   matInput
-                        mask="99999999999999.00"
+                        mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -165,7 +165,7 @@
                   id="currencyBoxClaimGrossGST"
                   formControlName="claimGrossGST"
                   matInput
-                       mask="99999999999999.00"
+                       mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -185,7 +185,7 @@
                   id="currencyBoxTotalActualClaim"
                   formControlName="totalActualClaim"
                   matInput
-                       mask="99999999999999.00"
+                       mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -216,7 +216,7 @@
                 id="currencyBoxclaimEligibleGST"
                 formControlName="claimEligibleGST"
                 matInput
-                     mask="99999999999999.00"
+                     mask="separator.2"
                 maxlength="100"/>
               <span class="currencyText">CA$</span>
             </div>
@@ -236,7 +236,7 @@
                 id="currencyBoxclaimTotal"
                 formControlName="claimTotal"
                 matInput
-                      mask="99999999999999.00"
+                      mask="separator.2"
                 maxlength="100"/>
               <span class="currencyText">CA$</span>
             </div>
@@ -256,7 +256,7 @@
                 id="currencyBoxapprovedClaimTotal"
                 formControlName="approvedClaimTotal"
                 matInput
-                     mask="99999999999999.00"
+                     mask="separator.2"
                 maxlength="100"/>
               <span class="currencyText">CA$</span>
             </div>
@@ -276,7 +276,7 @@
                 id="currencyBoxfirstClaimDeductible1000"
                 formControlName="firstClaimDeductible1000"
                 matInput
-                     mask="99999999999999.00"
+                     mask="separator.2"
                 maxlength="100"/>
               <span class="currencyText">CA$</span>
             </div>
@@ -301,7 +301,7 @@
                   id="currencyBoxapprovedReimbursement"
                   formControlName="approvedReimbursement"
                   matInput
-                       mask="99999999999999.00"
+                       mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -321,7 +321,7 @@
                   id="currencyBoxeligiblePayable"
                   formControlName="eligiblePayable"
                   matInput
-                        mask="99999999999999.00"
+                        mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -341,7 +341,7 @@
                   id="currencyBoxpaidClaimAmount"
                   formControlName="paidClaimAmount"
                   matInput
-                       mask="99999999999999.00"
+                       mask="separator.2"
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
