--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
@@ -27,7 +27,7 @@
 }
 
 .info-detail {
-    padding: 10px;
+    display: contents;
 }
 
 .wrap-text {
@@ -77,4 +77,7 @@ u {
 }
 .contact-title{
     font-size: 21px;
+}
+table{
+    width: 100%;
 }
