--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
@@ -133,6 +133,9 @@
              Select a disaster event that matches your community and date of damage<span style="color:red" >*</span>
            </p>
            <div class="col-md-6">
+            <mat-form-field class="invisible">
+              <input class="hide" matInput formControlName="eventName">
+           </mat-form-field>
              <mat-form-field appearance="outline">
                 <mat-label>Matching Disaster Event</mat-label>
                 <mat-select formControlName="eventId" matInput placeholder="Matching Disaster Event" required [disabled]="matchingEventsData.length <= 0 && vieworedit !== 'viewOnly' && vieworedit !== 'view'">
