--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
@@ -165,10 +165,21 @@ table {
   width: 22px;
   padding-top: 2px;
 }
+
 .noshow {
   display: none;
 
   &.visible {
     display: contents;
   }
+}
+
+.otherContactsBarBack {
+  background-color: #38598A;
+}
+
+.otherContactsBarText {
+  font-family: 'BC Sans';
+  font-size: 16px;
+  color: #ffffff;
 }
