--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -102,6 +102,12 @@
             <mat-form-field appearance="fill">
               <input formControlName="pcFirstName" matInput disabled readonly maxlength="100" />
             </mat-form-field>
+
+            <!-- 2024-09-25 EMCRI-663 waynezen -->
+            <input type="hidden" formControlName="contactId" />
+            <input type="hidden" formControlName="pcBCeIDOrgGuid" />
+            <input type="hidden" formControlName="pcBCeIDuserGuid" />
+
           </div>
           <div class="col-md-4">
             <p>
@@ -287,7 +293,6 @@
                   *matRowDef="let element; columns: otherContactsColumnsToDisplay"
                   class="example-element-row"
                 ></tr>
-
               </table>
 
               <div  *ngIf="otherContactsDataSource.getValue().length > 0">
