--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
@@ -100,40 +100,51 @@
     </div>-->
     <mat-card class="mat-elevation-z4 content" [ngStyle]="{'border-left': '20px solid ' + applItem.statusColor}" >
       <div style="border-bottom: 1px solid lightgrey; padding-bottom: 15px; display: flex;">
-        <div class="col-md-5">
+        <div class="col-md-4">
           <span><b>Project Number - </b></span>
           <span>{{applItem.projectNumber }}</span>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-5">
           <span><b>Project Name - </b></span>
           <span>{{ applItem.projectName }}</span>
         </div>
-        <div class="col-md-4" style="display: flex; justify-content: flex-end">
-          <button
-            class="application-button"
-            (click)="ViewClaims(applItem)"
-            type="button"
-            *ngIf="applItem.isClaimSubmission"
-                  >
+        <div class="col-md-3" style="display: flex; justify-content: flex-end;">
+          <div class="button-column">
+            <button
+              class="application-button"
+              (click)="ViewAmendment(applItem)"
+              type="button"
+              *ngIf="applItem.hasAmendment"
+                    >
           
-            Submit Claims
-          </button>
-          <button
-            class="application-button"
-            type="button"
-            *ngIf="applItem.status != 'Draft'"
-            (click)="ViewProject(applItem)"
-          >
-            View Project
-          </button>
-          <button
-            class="application-button"
-            type="button"
-            *ngIf="applItem.status == 'Draft'"
-            (click)="ViewProject(applItem)"
-          >
-            Complete Project
-          </button>
+              View Amendment
+            </button>
+            <button
+              class="application-button"
+              (click)="ViewClaims(applItem)"
+              type="button"
+              *ngIf="applItem.isClaimSubmission"
+                    >
+
+              Submit Claims
+            </button>
+            <button
+              class="application-button"
+              type="button"
+              *ngIf="applItem.status != 'Draft'"
+              (click)="ViewProject(applItem)"
+            >
+              View Project
+            </button>
+            <button
+              class="application-button"
+              type="button"
+              *ngIf="applItem.status == 'Draft'"
+              (click)="ViewProject(applItem)"
+            >
+              Complete Project
+            </button>
+          </div>
           <span class="material-symbols-outlined downArrow" (click)="Toggle(applItem)">
             {{ applItem.isHidden ? "keyboard_arrow_down" : "keyboard_arrow_up"}}
           </span>
