--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-6 headerText">
           <span class="page-heading">
-            Project Name(Amended)
+            {{projectName}}
             </span> 
         </div>
         <div class="col-md-3 amendment-refresh">
