--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.scss
@@ -45,6 +45,10 @@
   padding-bottom: 8px;
 }
 
+.page-heading {
+  font-size: 25px !important;
+}
+
 .infoText {
   background: #F6F9FC 0% 0% no-repeat padding-box;
   border: 1px solid #003366;
