EMCRI-566 Fixing the issue of contact

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -414,15 +414,12 @@
                           }}
                         </span>    -->
                         
-          <tr *ngFor="let contact of (formCreationService.otherContactsForm$ | async)?.value">
+          <!-- <tr *ngFor="let contact of (formCreationService.otherContactsForm$ | async)?.value">
                       <td>{{contact.firstName}}</td>
                       <td>{{contact.lastName}}</td>
                       <td>{{contact.phoneNumber}}</td>   
                       <td>{{contact.email}}</td>
-                      <!-- <td>{{contact.phoneNumber}}</td>
-                      <td>{{contact.JobTitle}}</td>
-                      <td>{{contact.Notes}}</td> -->
-          </tr>
+          </tr> -->
         </tbody>
         </table>
       </div>
