--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -1,4 +1,4 @@
-<div class="content-container" style="padding-bottom: 100px; padding-top: 50px;" *ngIf="lstApplications.length > 0">
+<div class="content-container" style="padding-bottom: 100px; padding-top: 50px; min-width: 1075px;" *ngIf="lstApplications.length > 0">
   <div class="row"
            *ngFor="let applItem of lstApplications"
            >
@@ -29,7 +29,7 @@
           <span style="font-size: 16px;">{{applItem.statusLastUpdated }}</span>
         </div>-->
       </div>
-      <div style="border-bottom: 1px solid lightgrey;padding-bottom:20px; height: 210px;width: 90%;min-width: 725px;">
+      <div [ngClass]="applItem.hasAppealStages ? 'appeal-stages' : ''" style="border-bottom: 1px solid lightgrey;padding-bottom:20px; height: 210px;width: 100%;min-width: 725px;">
         <div class="col-md-3" style="margin-top: 20px;">
           <span><b>Application Status</b></span><br />
           <span *ngIf="applItem.isErrorInStatus == true" style="color: red;">Error in displaying status<br /></span>
